Fixing the alignment and padding of the footer

--- a/scss/components/_mixin.scss
+++ b/scss/components/_mixin.scss
@@ -9,7 +9,21 @@
   text-indent: -999px;
 }
 
-@mixin smallest-fonts {
+@mixin bg-header {
+  font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 32px;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+%big-headeing {
+  @include bg-header;
+}
+
+@mixin small-fonts {
   font-family: 'DM Sans';
   font-style: normal;
   font-size: $default-font-size;
@@ -17,7 +31,15 @@
 }
 
 %small-font {
-  @include smallest-fonts;
+  @include small-fonts;
+}
+
+@mixin smallest-font {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  color: $base-color;
 }
 
 @mixin description {
@@ -33,7 +55,7 @@
   @include description;
 }
 
-@mixin container-desk($width: 1170px) {
+@mixin container-desk($width: 1000px) {
   margin-inline-end: auto;
   margin-inline-start: auto;
   max-width: $width;
